build_output.txt
src\window.cpp: In constructor 'Window::Window(const std::string&)':
src\window.cpp:8:41: error: 'Fullscreen' is not a member of 'sf::Style'; did you mean 'sf::State::Fullscreen'?
    8 |       window(display, title, sf::Style::Fullscreen),
      |                                         ^~~~~~~~~~
In file included from C:\Tools\SFML-3.0.2\include/SFML/Window/WindowBase.hpp:33,
                 from C:\Tools\SFML-3.0.2\include/SFML/Window/Window.hpp:32,
                 from C:\Tools\SFML-3.0.2\include/SFML/Graphics/RenderWindow.hpp:36,
                 from C:\Tools\SFML-3.0.2\include/SFML/Graphics.hpp:45,
                 from D:\Development\Shade\include/window.hpp:3,
                 from src\window.cpp:1:
C:\Tools\SFML-3.0.2\include/SFML/Window/WindowEnums.hpp:57:5: note: 'sf::State::Fullscreen' declared here
   57 |     Fullscreen //!< Fullscreen window
      |     ^~~~~~~~~~
src\window.cpp:11:23: error: no matching function for call to 'sf::Sprite::Sprite()'
   11 |       uiView(worldView)
      |                       ^
In file included from C:\Tools\SFML-3.0.2\include/SFML/Graphics.hpp:48:
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:78:5: note: candidate: 'sf::Sprite::Sprite(const sf::Texture&, const sf::IntRect&)'
   78 |     Sprite(const Texture& texture, const IntRect& rectangle);
      |     ^~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:78:5: note:   candidate expects 2 arguments, 0 provided
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:61:14: note: candidate: 'sf::Sprite::Sprite(const sf::Texture&)'
   61 |     explicit Sprite(const Texture& texture);
      |              ^~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:61:14: note:   candidate expects 1 argument, 0 provided
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:50:25: note: candidate: 'constexpr sf::Sprite::Sprite(const sf::Sprite&)'
   50 | class SFML_GRAPHICS_API Sprite : public Drawable, public Transformable
      |                         ^~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:50:25: note:   candidate expects 1 argument, 0 provided
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:50:25: note: candidate: 'constexpr sf::Sprite::Sprite(sf::Sprite&&)'
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Sprite.hpp:50:25: note:   candidate expects 1 argument, 0 provided
src\window.cpp:53:29: error: no matching function for call to 'sf::Sprite::setOrigin(float, float)'
   53 |         coinSprite.setOrigin(bounds.size.x / 2.f, bounds.size.y / 2.f);
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Tools\SFML-3.0.2\include/SFML/Graphics/Shape.hpp:37,
                 from C:\Tools\SFML-3.0.2\include/SFML/Graphics/CircleShape.hpp:32,
                 from C:\Tools\SFML-3.0.2\include/SFML/Graphics.hpp:32:
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:115:10: note: candidate: 'void sf::Transformable::setOrigin(sf::Vector2f)'
  115 |     void setOrigin(Vector2f origin);
      |          ^~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:115:10: note:   candidate expects 1 argument, 2 provided
src\window.cpp:73:27: error: no matching function for call to 'sf::Sprite::setPosition(float, float)'
   73 |     coinSprite.setPosition(textPos.x - textBounds.size.x - padding - 16.f, textPos.y + 15.f);
      |     ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:70:10: note: candidate: 'void sf::Transformable::setPosition(sf::Vector2f)'
   70 |     void setPosition(Vector2f position);
      |          ^~~~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:70:10: note:   candidate expects 1 argument, 2 provided
src\window.cpp: In member function 'void Window::updateCoinDisplay(int)':
src\window.cpp:91:23: error: no matching function for call to 'sf::Text::setOrigin(float&, float)'
   91 |     CoinText.setOrigin(bounds.size.x, 0.f);
      |     ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:115:10: note: candidate: 'void sf::Transformable::setOrigin(sf::Vector2f)'
  115 |     void setOrigin(Vector2f origin);
      |          ^~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:115:10: note:   candidate expects 1 argument, 2 provided
src\window.cpp:98:27: error: no matching function for call to 'sf::Sprite::setPosition(float, float)'
   98 |     coinSprite.setPosition(textPos.x - bounds.size.x - padding - 16.f, textPos.y + 15.f);
      |     ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:70:10: note: candidate: 'void sf::Transformable::setPosition(sf::Vector2f)'
   70 |     void setPosition(Vector2f position);
      |          ^~~~~~~~~~~
C:\Tools\SFML-3.0.2\include/SFML/Graphics/Transformable.hpp:70:10: note:   candidate expects 1 argument, 2 provided
